@@ -23,6 +23,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2010-07-16 [A] Added plugin hook 'token_criteria' {eenemeenemuu}
 2010-07-16 [C] Fixed missing CSS class cpg_summary and icon replacement leading to broken output of help boxes on config screen (thread IDs 65994 and 65996) {GauGau}
 2010-07-13 [B] Fixed possibility for users to edit their files in public galleries if disabled in config (thread ID 65693) {eenemeenemuu}
 2010-07-13 [A] Disable the possibility for guests to enter file details by default (thread ID 62522) {eenemeenemuu}
